--- a/src/app/components/recipes/recipes-list/recipes-list/recipes-list.component.html
+++ b/src/app/components/recipes/recipes-list/recipes-list/recipes-list.component.html
@@ -25,6 +25,13 @@
         </span>
         <div class="btn-bg"></div>
       </button>
+      <button class="create-btn" routerLink="/dashboard">
+        <span class="btn-content">
+          <i class="bi bi-arrow-left"></i>
+          <span>Zurück</span>
+        </span>
+        <div class="btn-bg"></div>
+      </button>
     </div>
   </header>
 
